--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,14 +3,15 @@ description: A simple, unofficial AWS S3 client in dart. Supports downloading ob
 version: 0.6.0
 homepage: https://github.com/diagnosia/flutter_aws_s3_client
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.5 <4.0.0'
+  flutter: '>=3.10.5'
 
 dependencies:
-  amazon_cognito_identity_dart_2: ^1.0.0-nullsafety.3
-  built_value: "^8.0.0"
-  built_collection: "^5.0.0"
-  xml2json : ^5.0.0
-  http: ^0.13.0
+  amazon_cognito_identity_dart_2: ^3.5.0
+  built_value: ^8.6.1
+  built_collection: ^5.1.1
+  xml2json: ^6.1.0
+  http: ^1.1.0
 dev_dependencies:
-  built_value_generator: "^8.0.0"
-  build_runner: ^1.10.0
+  built_value_generator: ^8.6.1
+  build_runner: ^2.4.6
